Update Staff.md with explicit HTML anchors, expanded details, and checkboxes for readiness.